cambios en el back, actualizando orden, detalle