@@ -1,5 +1,8 @@
 package co.todotech.service.impl;
 
+import co.todotech.exception.producto.ProductoBusinessException;
+import co.todotech.exception.producto.ProductoDuplicateException;
+import co.todotech.exception.producto.ProductoNotFoundException;
 import co.todotech.mapper.ProductoMapper;
 import co.todotech.model.dto.producto.ProductoDto;
 import co.todotech.model.entities.Producto;
@@ -12,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -24,56 +26,28 @@ public class ProductoServiceImpl implements ProductoService {
 
     @Override
     @Transactional
-    public void crearProducto(ProductoDto dto) throws Exception {
-        log.info("Creando producto {}", dto.nombre());
+    public void crearProducto(ProductoDto dto) {
+        log.info("Creando producto: {}", dto.getNombre());
 
-
-        if (productoRepository.existsByCodigo(dto.codigo())) {
-            throw new Exception("Ya existe un producto con el código: " + dto.codigo());
-        }
-        if (productoRepository.existsByNombre(dto.nombre())) {
-            throw new Exception("Ya existe un producto con el nombre: " + dto.nombre());
-        }
+        validarDatosCreacion(dto);
 
         Producto producto = productoMapper.toEntity(dto);
-
-        // Estado por defecto: ACTIVO (si no viene) y AGOTADO si stock <= 0
-        if (producto.getEstado() == null) {
-            producto.setEstado(EstadoProducto.ACTIVO);
-        }
-        if (producto.getStock() != null && producto.getStock() <= 0) {
-            producto.setEstado(EstadoProducto.AGOTADO);
-        }
+        establecerEstadoAutomatico(producto);
 
         productoRepository.save(producto);
         log.info("Producto creado exitosamente: id={}, codigo={}", producto.getId(), producto.getCodigo());
     }
 
+    @Override
     @Transactional
-    public void actualizarProducto(Long id, ProductoDto dto) throws Exception {
+    public void actualizarProducto(Long id, ProductoDto dto) {
         log.info("Actualizando producto id={}", id);
 
+        Producto producto = obtenerProductoPorIdSeguro(id);
+        validarDatosActualizacion(id, dto, producto);
 
-        Producto producto = productoRepository.findById(id)
-                .orElseThrow(() -> new Exception("Producto no encontrado con ID: " + id));
-
-        // Validar unicidad contra otros registros
-        if (!producto.getCodigo().equals(dto.codigo())
-                && productoRepository.existsByCodigoAndIdNot(dto.codigo(), id)) {
-            throw new Exception("Ya existe otro producto con el código: " + dto.codigo());
-        }
-        if (!producto.getNombre().equals(dto.nombre())
-                && productoRepository.existsByNombreAndIdNot(dto.nombre(), id)) {
-            throw new Exception("Ya existe otro producto con el nombre: " + dto.nombre());
-        }
-
-        // Actualiza campos editables desde el DTO (ignora nulls)
         productoMapper.updateProductoFromDto(dto, producto);
-
-        // Si no vino estado en el DTO, ajusta automáticamente según stock
-        if (dto.estado() == null && producto.getStock() != null && producto.getStock() <= 0) {
-            producto.setEstado(EstadoProducto.AGOTADO);
-        }
+        ajustarEstadoSegunStock(producto, dto.getEstado());
 
         productoRepository.save(producto);
         log.info("Producto actualizado: id={}, codigo={}", producto.getId(), producto.getCodigo());
@@ -81,66 +55,214 @@ public class ProductoServiceImpl implements ProductoService {
 
     @Override
     @Transactional
-    public void eliminarProducto(Long id) throws Exception {
-        Producto producto = productoRepository.findById(id)
-                .orElseThrow(() -> new Exception("Producto no encontrado con ID: " + id));
+    public void eliminarProducto(Long id) {
+        log.info("Eliminando producto id={}", id);
+
+        Producto producto = obtenerProductoPorIdSeguro(id);
+
+        // Validar que no tenga órdenes asociadas (opcional)
+        // if (ordenRepository.existsByProductoId(id)) {
+        //     throw new ProductoBusinessException("No se puede eliminar el producto porque tiene órdenes asociadas");
+        // }
 
         productoRepository.delete(producto);
-        log.info("Producto eliminado físicamente: {}", id);
+        log.info("Producto eliminado físicamente: id={}", id);
     }
 
     @Override
     @Transactional
-    public void cambiarEstadoProducto(Long id) throws Exception {
-        Producto producto = productoRepository.findById(id)
-                .orElseThrow(() -> new Exception("Producto no encontrado con ID: " + id));
+    public void cambiarEstadoProducto(Long id) {
+        log.info("Cambiando estado del producto id={}", id);
 
-        EstadoProducto anterior = producto.getEstado();
-        // Regla simple: si está ACTIVO -> INACTIVO, en otro caso -> ACTIVO
-        if (anterior == EstadoProducto.ACTIVO) {
-            producto.setEstado(EstadoProducto.INACTIVO);
-        } else {
+        Producto producto = obtenerProductoPorIdSeguro(id);
+        EstadoProducto nuevoEstado = calcularNuevoEstado(producto.getEstado());
+
+        producto.setEstado(nuevoEstado);
+        productoRepository.save(producto);
+
+        log.info("Estado del producto {} cambiado de {} a {}", id, producto.getEstado(), nuevoEstado);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public ProductoDto obtenerProductoPorId(Long id) {
+        log.debug("Buscando producto por ID: {}", id);
+
+        Producto producto = obtenerProductoPorIdSeguro(id);
+        return productoMapper.toDto(producto);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public ProductoDto obtenerProductoPorCodigo(String codigo) {
+        log.debug("Buscando producto por código: {}", codigo);
+
+        if (codigo == null || codigo.trim().isEmpty()) {
+            throw new ProductoBusinessException("El código de búsqueda no puede estar vacío");
+        }
+
+        Producto producto = productoRepository.findByCodigo(codigo.trim())
+                .orElseThrow(() -> new ProductoNotFoundException("código", codigo));
+
+        return productoMapper.toDto(producto);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public ProductoDto obtenerProductoPorNombre(String nombre) {
+        log.debug("Buscando producto por nombre: {}", nombre);
+
+        if (nombre == null || nombre.trim().isEmpty()) {
+            throw new ProductoBusinessException("El nombre de búsqueda no puede estar vacío");
+        }
+
+        Producto producto = productoRepository.findFirstByNombreIgnoreCase(nombre.trim())
+                .orElseThrow(() -> new ProductoNotFoundException("nombre", nombre));
+
+        return productoMapper.toDto(producto);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ProductoDto> obtenerProductoPorEstado(EstadoProducto estado) {
+        log.debug("Buscando productos por estado: {}", estado);
+
+        if (estado == null) {
+            throw new ProductoBusinessException("El estado no puede ser nulo");
+        }
+
+        return productoRepository.findAllByEstado(estado).stream()
+                .map(productoMapper::toDto)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ProductoDto> obtenerProductoPorCategoriaId(Long categoriaId) {
+        log.debug("Buscando productos por categoría ID: {}", categoriaId);
+
+        if (categoriaId == null) {
+            throw new ProductoBusinessException("El ID de categoría no puede ser nulo");
+        }
+
+        return productoRepository.findAllByCategoriaId(categoriaId).stream()
+                .map(productoMapper::toDto)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ProductoDto> obtenerProductosActivos() {
+        log.debug("Obteniendo productos activos");
+        return obtenerProductoPorEstado(EstadoProducto.ACTIVO);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ProductoDto> buscarProductosPorNombre(String nombre) {
+        log.debug("Buscando productos por nombre: {}", nombre);
+
+        if (nombre == null || nombre.trim().isEmpty()) {
+            throw new ProductoBusinessException("El término de búsqueda no puede estar vacío");
+        }
+
+        return productoRepository.findByNombreContainingIgnoreCase(nombre.trim()).stream()
+                .map(productoMapper::toDto)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ProductoDto> obtenerProductosDisponibles() {
+        log.debug("Obteniendo productos disponibles (activos y con stock)");
+
+        return productoRepository.findProductosDisponibles().stream()
+                .map(productoMapper::toDto)
+                .toList();
+    }
+
+    // ========== MÉTODOS PRIVADOS DE APOYO ==========
+
+    private Producto obtenerProductoPorIdSeguro(Long id) {
+        if (id == null) {
+            throw new ProductoBusinessException("El ID del producto no puede ser nulo");
+        }
+
+        return productoRepository.findById(id)
+                .orElseThrow(() -> new ProductoNotFoundException(id));
+    }
+
+    private void validarDatosCreacion(ProductoDto dto) {
+        if (dto.getCodigo() != null && productoRepository.existsByCodigo(dto.getCodigo())) {
+            throw new ProductoDuplicateException("código", dto.getCodigo());
+        }
+
+        if (dto.getNombre() != null && productoRepository.existsByNombre(dto.getNombre())) {
+            throw new ProductoDuplicateException("nombre", dto.getNombre());
+        }
+
+        validarDatosBasicos(dto);
+    }
+
+    private void validarDatosActualizacion(Long id, ProductoDto dto, Producto productoExistente) {
+        if (dto.getCodigo() != null && !dto.getCodigo().equals(productoExistente.getCodigo())
+                && productoRepository.existsByCodigoAndIdNot(dto.getCodigo(), id)) {
+            throw new ProductoDuplicateException("código", dto.getCodigo());
+        }
+
+        if (dto.getNombre() != null && !dto.getNombre().equals(productoExistente.getNombre())
+                && productoRepository.existsByNombreAndIdNot(dto.getNombre(), id)) {
+            throw new ProductoDuplicateException("nombre", dto.getNombre());
+        }
+
+        validarDatosBasicos(dto);
+    }
+
+    private void validarDatosBasicos(ProductoDto dto) {
+        if (dto.getPrecio() != null && dto.getPrecio() <= 0) {
+            throw new ProductoBusinessException("El precio debe ser mayor a 0");
+        }
+
+        if (dto.getStock() != null && dto.getStock() < 0) {
+            throw new ProductoBusinessException("El stock no puede ser negativo");
+        }
+
+        // Validar categoría
+        if (dto.getCategoria() == null || dto.getCategoria().getId() == null) {
+            throw new ProductoBusinessException("La categoría es obligatoria");
+        }
+    }
+
+    private void establecerEstadoAutomatico(Producto producto) {
+        if (producto.getEstado() == null) {
             producto.setEstado(EstadoProducto.ACTIVO);
         }
 
-        productoRepository.save(producto);
-        log.info("Estado del producto {} cambiado de {} a {}", id, anterior, producto.getEstado());
+        if (producto.getStock() != null && producto.getStock() <= 0) {
+            producto.setEstado(EstadoProducto.AGOTADO);
+        }
+    }
+
+    private void ajustarEstadoSegunStock(Producto producto, EstadoProducto estadoDto) {
+        // Solo ajustar automáticamente si no se envió estado en el DTO
+        if (estadoDto == null && producto.getStock() != null && producto.getStock() <= 0) {
+            producto.setEstado(EstadoProducto.AGOTADO);
+        }
+    }
+
+    private EstadoProducto calcularNuevoEstado(EstadoProducto estadoActual) {
+        return (estadoActual == EstadoProducto.ACTIVO)
+                ? EstadoProducto.INACTIVO
+                : EstadoProducto.ACTIVO;
     }
 
     @Override
-    public ProductoDto obtenerProductoPorId(Long id) throws Exception {
-        Producto producto = productoRepository.findById(id)
-                .orElseThrow(() -> new Exception("Producto no encontrado con ID: " + id));
-        return productoMapper.toDto(producto);
-    }
+    @Transactional(readOnly = true)
+    public List<ProductoDto> obtenerTodosLosProductos() {
+        log.debug("Obteniendo todos los productos");
 
-    @Override
-    public ProductoDto obtenerProductoPorCodigo(String codigo) throws Exception {
-        Producto producto = productoRepository.findByCodigo(codigo)
-                .orElseThrow(() -> new Exception("Producto no encontrado con código: " + codigo));
-        return productoMapper.toDto(producto);
-    }
-
-    @Override
-    public ProductoDto obtenerProductoPorNombre(String nombre) throws Exception {
-        Producto producto = productoRepository.findFirstByNombreIgnoreCase(nombre)
-                .orElseThrow(() -> new Exception("Producto no encontrado con nombre: " + nombre));
-        return productoMapper.toDto(producto);
-    }
-
-    @Override
-    public List<ProductoDto> obtenerProductoPorEstado(EstadoProducto estado) {
-        return productoRepository.findAllByEstado(estado).stream()
+        return productoRepository.findAll().stream()
                 .map(productoMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    @Override
-    public List<ProductoDto> obtenerProductoPorCategoriaId(Long categoriaId) {
-        return productoRepository.findAllByCategoriaId(categoriaId).stream()
-                .map(productoMapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-
 }
